--- a/app/views/my_games/_copy_form.html.erb
+++ b/app/views/my_games/_copy_form.html.erb
@@ -5,11 +5,17 @@
 <%= hidden_field_tag :game_id, id %>
 <%= hidden_field_tag :view, view %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
-<div class="action">
-<label class="c-m chosen">Copy<%= radio_button_tag 'copy', true, checked: true %></label>
-<label class="c-m" style="padding-left: 3px;">Move<%= radio_button_tag 'copy', false %></label>
-<span class="cf-name"><%= shorter_name(game_name) %></span>
+
+<div class="action uk-grid-collapse" uk-grid>
+    <div class="inputs">
+        <label class="c-m chosen">Copy<%= radio_button_tag 'copy', true, checked: true %></label>
+        <label class="c-m" style="padding-left: 3px;">Move<%= radio_button_tag 'copy', false %></label>
+    </div>
+    <div class="cf-name uk-text-truncate uk-width-expand">
+        <%= game_name %>
+    </div>
 </div>
+
 <hr class="md">
 <div class="select-collection">
     <div uk-form-custom="target: > * > span:last-child">
