--- a/app/views/my_games/_edit_form.html.erb
+++ b/app/views/my_games/_edit_form.html.erb
@@ -6,10 +6,16 @@
 <%= hidden_field_tag :last_physical, game.physical %>
 <%= hidden_field_tag :view, view %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
-<div class="action">
-<label class="c-m chosen">Edit</span></label>
-<span class="cf-name"><%= shorter_name(game_name) %></span>
+
+<div class="action uk-grid-collapse" uk-grid>
+    <div class="inputs">
+        <label class="c-m chosen">Edit</label>
+    </div>
+    <div class="cf-name uk-text-truncate uk-width-expand">
+        <%= game_name %>
+    </div>
 </div>
+
 <hr class="md">
 <div id="platform-option">
 
