--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,7 +68,7 @@ $disabled: #b4b4b4;
     left: 20px;
     letter-spacing: 0.5px;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 24px;
     background: #cccccc;
     padding: 15px 10px 5px 10px;
@@ -104,7 +104,7 @@ $disabled: #b4b4b4;
 }
 
 #logout {
-    top: 12px;
+    top: 11px;
     right: 20px;
     svg {
         width: 25px;
@@ -1104,6 +1104,14 @@ p.header {
     top: 50%;
     width: 9999px;
     height: 1px;
+    background: #C8C8C8;
+}
+
+.add-form .strike > span:after {
+    background: #afafaf;
+}
+
+.add-form.white-form .strike > span:after {
     background: #C8C8C8;
 }
 
