--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,7 +80,7 @@ $disabled: #b4b4b4;
     background: #cccccc;
     border: none;
     color: #777;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
     letter-spacing: 0.5px;
     padding-bottom: 2px;
@@ -158,8 +158,9 @@ div#search-results.mask2:after {
     }
 
     p:after {
-    content: "..";
-    animation: 2.5s infinite dots linear;
+    position: absolute;
+    content: "";
+    animation: 2s infinite dots linear;
     }
 }
 
