--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="uk-grid-match uk-grid-collpase" uk-grid>
         <div class="uk-width-1-6"></div>
         <div class="uk-width-2-3">
-          <div id="big-c" class="uk-container content-wrap uk-container-expand">
+          <div id="big-c" class="uk-container uk-container-expand">
             <%= yield %>
           </div>
         </div>
