Add feature: the user can see the history of his searches

--- a/app/views/static_pages/_search_page.html.erb
+++ b/app/views/static_pages/_search_page.html.erb
@@ -1,3 +1,8 @@
 <%= render 'search_bar' %>
 <%= content_tag :div, nil, id: 'search-results' %>
 <%= content_tag :div, nil, id: 'search-wait' %>
+
+<%= content_tag :div, id: 'search-history' do %>
+  Last queries:
+    <%= render @records %>
+<% end %>
