--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -1,4 +1,4 @@
-<%= form_with scope: "search", url: 'search_games', method: :get do |f| %>
+<%= form_for "search", url: 'search_games', id: record.id, method: :get, html: {remote: true} do |f| %>
   <%= f.hidden_field :inquiry, value: record.inquiry %>
   <%= f.hidden_field :query_type, value: record.query_type %>
 
