--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -3,7 +3,8 @@ $("li.active").removeClass('active');
 $("#m-search").addClass('active');
 $('input#search-igdb-bar').focus();
 changeSearchBar();
-
 searchWait();
 clearNoResults();
+switchSearchBarTabs();
+manipulatePlatforms();
 Cookies.set('last', 'search', { expires: 30 });
