--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -7,40 +7,40 @@
 </div>
 <div class="search-dropdown" uk-dropdown="toggle: #search-igdb-bar; pos: bottom-center; mode: click">
   <ul class="nav">
-    <li><%= content_tag :a, nil, 'uk-icon': 'settings' %></li>
-    <li><%= content_tag :a, nil, 'uk-icon': 'clock' %></li>
+    <li><%= content_tag :a, nil, id: 'switch_to_f', class: 'active', 'uk-icon': 'settings' %></li>
+    <li><%= content_tag :a, nil, id: 'switch_to_h', 'uk-icon': 'clock' %></li>
   </ul>
   <div id="bar-search">
     <div class="strike"><span>Search by:</span></div>
     <div class="uk-margin uk-grid-small uk-grid drop-grid">
-      <label class="searchby-labels"><%= f.radio_button :query_type, "game", checked: true, class: "uk-radio" %><span>Title</span></label>
-      <label class="searchby-labels"><%= f.radio_button :query_type, "char", class: "uk-radio" %><span>Character</span></label>
-      <label class="searchby-labels"><%= f.radio_button :query_type, "dev", class: "uk-radio" %><span>Developer</span></label>
+      <label class="labels-100"><%= f.radio_button :query_type, "game", checked: true, class: "uk-radio" %> Title</label>
+      <label class="labels-100"><%= f.radio_button :query_type, "char", class: "uk-radio" %> Character</label>
+      <label class="labels-100"><%= f.radio_button :query_type, "dev", class: "uk-radio" %> Developer</label>
     </div>
     <div class="strike"><span>Platforms:</span></div>
-    <div class="uk-margin uk-grid-small uk-grid platforms-grid">
+    <div  id="platforms-grid" class="uk-margin uk-grid-small uk-grid">
       <div class="none-all">
         <%= content_tag :a, 'none', id: 'p-none' %>
-        <%= content_tag :a, 'all', id: 'plat-all' %>
+        <%= content_tag :a, 'all', id: 'p-all' %>
       </div>
-      <label class="platforms-labels"><%= f.check_box(:console, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Consoles</span></label>
-      <label class="platforms-labels"><%= f.check_box(:arcade, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Arcade</span></label>
-      <label class="platforms-labels"><%= f.check_box(:portable, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Portable</span></label>
-      <label class="platforms-labels"><%= f.check_box(:pc, checked: "checked", class: "uk-checkbox search-checkbox") %><span>PC</span></label>
-      <label class="platforms-labels"><%= f.check_box(:linux, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Linux</span></label>
-      <label class="platforms-labels"><%= f.check_box(:mac, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Mac</span></label>
-      <label class="platforms-labels"><%= f.check_box(:mobile, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Mobile</span></label>
-      <label class="platforms-labels"><%= f.check_box(:computer, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Computers</span></label>
-      <label class="platforms-labels"><%= f.check_box(:other, checked: "checked", class: "uk-checkbox search-checkbox") %><span>Other</span></label>
+      <label class="labels-100"><%= f.check_box(:console, checked: "checked", class: "uk-checkbox search-checkbox") %> Consoles</label>
+      <label class="labels-100"><%= f.check_box(:arcade, checked: "checked", class: "uk-checkbox search-checkbox") %> Arcade</label>
+      <label class="labels-100"><%= f.check_box(:portable, checked: "checked", class: "uk-checkbox search-checkbox") %> Portable</label>
+      <label class="labels-100"><%= f.check_box(:pc, checked: "checked", class: "uk-checkbox search-checkbox") %> PC</label>
+      <label class="labels-100"><%= f.check_box(:linux, checked: "checked", class: "uk-checkbox search-checkbox") %> Linux</label>
+      <label class="labels-100"><%= f.check_box(:mac, checked: "checked", class: "uk-checkbox search-checkbox") %> Mac</label>
+      <label class="labels-100"><%= f.check_box(:mobile, checked: "checked", class: "uk-checkbox search-checkbox") %> Mobile</label>
+      <label class="labels-100"><%= f.check_box(:computer, checked: "checked", class: "uk-checkbox search-checkbox") %> Computers</label>
+      <label class="labels-100"><%= f.check_box(:other, checked: "checked", class: "uk-checkbox search-checkbox") %> Other</label>
     </div>
     <div class="strike"><span>Show: </span></div>
     <div class="uk-margin uk-grid-small uk-grid drop-grid">
-      <label class="options-labels"><%= f.check_box(:only_released, checked: "checked", class: "uk-checkbox") %><span>Only with release date</span></label>
-      <label class="options-labels-short"><%= f.check_box(:dlc, checked: "checked", class: "uk-checkbox") %><span>DLCs</span></label>
-      <label class="options-labels"><%= f.check_box(:expansion, checked: "checked", class: "uk-checkbox") %><span>Expansions</span></label>
-      <label class="options-labels-short"><%= f.check_box(:bundle, checked: "checked", class: "uk-checkbox") %><span>Bundles</span></label>
-      <label class="options-labels"><%= f.check_box(:standalone, checked: "checked", class: "uk-checkbox") %><span>Standalone expansions</span></label>
-      <label class="options-labels-short"><%= f.check_box(:erotic, checked: "checked", class: "uk-checkbox") %><span>Erotic games</span></label>
+      <label class="labels-177"><%= f.check_box(:only_released, checked: "checked", class: "uk-checkbox") %> Only with release date</label>
+      <label class="labels-110"><%= f.check_box(:dlc, checked: "checked", class: "uk-checkbox") %> DLCs</label>
+      <label class="labels-177"><%= f.check_box(:expansion, checked: "checked", class: "uk-checkbox") %> Expansions</label>
+      <label class="labels-110"><%= f.check_box(:bundle, checked: "checked", class: "uk-checkbox") %> Bundles</label>
+      <label class="labels-177"><%= f.check_box(:standalone, checked: "checked", class: "uk-checkbox") %> Standalone expansions</label>
+      <label class="labels-110"><%= f.check_box(:erotic, checked: "checked", class: "uk-checkbox") %> Erotic games</label>
     </div>
     <div class="search-tip">
       <a uk-toggle="target: #examples; animation: uk-animation-fade">Tip: Use * wildcard</a>
@@ -70,7 +70,8 @@
     </div>
   </div>
   <div id="bar-history">
-    <%= render partial: 'records/records_in_bar' %>
+    <div class="strike"><span>History:</span></div>
+    <%= render partial: 'records/bar_records' %>
   </div>
 </div>
 <% end %>
