--- a/app/views/static_pages/_search_page.html.erb
+++ b/app/views/static_pages/_search_page.html.erb
@@ -1,8 +1,6 @@
 <%= render 'search_bar' %>
-<%= content_tag :div, nil, id: 'search-results' %>
-<%= content_tag :div, nil, id: 'search-wait' %>
-
-<%= content_tag :div, id: 'search-history' do %>
+<%= content_tag :div, id: 'search-results' do %>
   Last queries:
     <%= render @records %>
 <% end %>
+<%= content_tag :div, nil, id: 'search-wait' %>
