Style search history records in search page.

--- a/app/views/static_pages/_search_page.html.erb
+++ b/app/views/static_pages/_search_page.html.erb
@@ -1,6 +1,5 @@
 <%= render 'search_bar' %>
 <%= content_tag :div, id: 'search-results' do %>
-  Last queries:
-    <%= render @records %>
+    <%= render partial: 'search_history' %>
 <% end %>
 <%= content_tag :div, nil, id: 'search-wait' %>
