--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -678,6 +678,55 @@ li.active:hover .opts {
     }
 }
 
+#search-history {
+    width: 400px;
+    margin: 0 auto;
+    border: thin solid #bababa;
+    padding: 20px;
+    border-radius: 5px;
+    box-sizing: border-box;
+
+    .record {
+        background: none;
+        margin-bottom: 8px;
+        &:hover {
+            background: #d4d4d4;
+        }
+    }
+
+    .input {
+        font-size: 16px;
+    }
+
+    .extr {
+        border-top: thin solid #bababa;
+    }
+
+    .title {
+        color: #969696;
+        vertical-align: middle;
+        font-weight: 300;
+        padding-left: 3px;
+    }
+}
+
+.clock {
+    margin: 0 5px 20px;
+    color: #a0a0a0;
+
+    svg circle {
+        stroke-width: 0.8px;
+    }
+
+    svg rect {
+        width: 0.8px;
+    }
+
+    svg path {
+        stroke-width: 1px;
+    }
+}
+
 .record {
     margin: 0;
     background: #cccccc;
@@ -686,26 +735,26 @@ li.active:hover .opts {
     margin-bottom: 5px;
     cursor: pointer;
     font-weight: 300;
+    text-align: right;
+    font-size: 13px;
+    line-height: 20px;
 
     span {
-        float: right;
+        float: left;
     }
 
     .input {
         font-weight: 400;
         font-style: italic;
         max-width: 240px;
+        font-size: 14px;
     }
-
-    .extr {
-
-    font-size: 13px;
-}
 
 }
 
 .record:hover {
     background: #c3c3c3;
+    color: #555;
 }
 
 .none-all {
@@ -864,7 +913,8 @@ li.active:hover .opts {
 
 // Search Results (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - //
 #search-results {
-    margin-top: 120px;
+    // margin-top: 120px;
+    margin-top: 80px;
 }
 
 // ToolBar
