--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -1,14 +1,2 @@
-<%= form_for "search", url: 'search_games', id: record.id, method: :get, html: {remote: true} do |f| %>
-  <%= f.hidden_field :inquiry, value: record.inquiry %>
-  <%= f.hidden_field :query_type, value: record.query_type %>
+<%= present_bar_record(record) %>
 
-  <% filters = [:console, :arcade, :portable, :pc, :linux, :mac, :mobile,
-    :computer, :other, :only_released, :dlc, :expansion, :bundle, :standalone,
-    :erotic] %>
-
-  <% filters.each_with_index do |t, i| %>
-    <%= f.hidden_field t, value: record.filters[i] %>
-  <% end %>
-
-  <%= f.submit "#{record.inquiry} : #{record.query_type} : #{record.results}" %>
-<% end %>
