Delete unnecessary file.

--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -71,7 +71,7 @@
   </div>
   <div id="bar-history">
     <div class="strike"><span>History:</span></div>
-    <%= render partial: 'records/bar_records' %>
+    <%= render @records %>
   </div>
 </div>
 <% end %>
