Add js function for search history records. Clicking on records fills up a the search igdb form and submits.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -512,7 +512,7 @@ li.active:hover .opts {
 }
 
 // Search Form (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - //
-.search-form {
+#search-form {
     position: relative;
     width: 400px;
     margin: 20px auto 0;
