--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -7,4 +7,5 @@ searchWait();
 clearNoResults();
 switchSearchBarTabs();
 manipulatePlatforms();
+activateSearchRecords();
 Cookies.set('last', 'search', { expires: 30 });
