Re-render search history records inside a search bar after each search.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -731,7 +731,6 @@ li.active:hover .opts {
 
 .record {
     margin: 0;
-    background: #cccccc;
     border-radius: 3px;
     padding: 0 6px;
     margin-bottom: 5px;
@@ -755,7 +754,7 @@ li.active:hover .opts {
 }
 
 .record:hover {
-    background: #c3c3c3;
+    background: #00000014;
     color: #555;
 }
 
