--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -70,8 +70,7 @@
     </div>
   </div>
   <div id="bar-history">
-    <div class="strike"><span>History:</span></div>
-    <%= render @records %>
+    <%= render partial: 'records/bar_records' %>
   </div>
 </div>
 <% end %>
