--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -11,7 +11,8 @@ cleanOffcanvas();
 if (no_errors) {
   $("#search-results").html("<%= j(render partial:'results', locals: { view: view }) %>");
   $("#search-results").append("<%= j(render partial: 'layouts/s_toolbar', locals: { last_form: @inquiry.last_form.values }) %>");
-
+  $("#bar-history").html("<%= j(render partial:'records/bar_records') %>");
+  activateSearchRecords();
   changeTheme();
   changeSearchView();
 
