--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -13,7 +13,7 @@
       <% else %>
         <%= link_to(cover_show_url(igdb_id), class: 'game-cover-effect', remote: true, 'uk-toggle': "target: #i-lone") do %>
           <%= content_tag(:div, id: "gc-#{ igdb_id }", class: 'no-cover') do %>
-            <%= content_tag(:div, game[:name], class: 'no-cover-game-name unselectable') %>
+            <%= content_tag(:div, game[:name], class: 'no-cover-game-name') %>
             <%= svg 'no_image' %>
           <% end %>
           <%= content_tag :div, game[:addl], class: 'addl-info' if game[:addl] %>
