--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -992,11 +992,10 @@ input.coll-form {
     left: 0;
     z-index: 99;
     margin: 0px;
-    background: #fff;
+    background: #c5c5c5;
     border-radius: 0px 0px 3px 3px;
-    color: #666666;
+    color: #555;
     font-size: 14px;
-    font-style: italic;
     word-wrap: break-word;
     padding: 10px;
 
