--- a/app/views/collections/remove_game_search.js.erb
+++ b/app/views/collections/remove_game_search.js.erb
@@ -12,6 +12,7 @@ UIkit.notification({
 if (success) {
     var game_id = '<%= @game.igdb_id %>';
     var x_id = '<%= @x_id %>';
+    var uniq_results = x_id === game_id;
     var new_already = "<%= j(render partial: 'search/already_in', locals: { game_name: @game.name, igdb_id: @game.igdb_id, x_id: @x_id }) %>";
 
     var view = $('#view-container').attr('view');
@@ -38,11 +39,23 @@ if (success) {
     if (remove_underline) {
 
         if (view === 'covers') {
-            var name_el = $('[id^=gs-' + game_id + ']').find('.game-name span');
+
+            if (uniq_results) {
+                var name_el = $('#gs-' + game_id).find('.game-name span');
+            } else {
+                var name_el = $('[id^=gs-' + game_id + '-]').find('.game-name span');
+            }
+
             name_el.removeClass('owned');
         }
 
-        $('[id^=add-' + game_id + ']').each(function() {
+        if (uniq_results) {
+            var add_links = $('#add-' + game_id)
+        } else {
+            var add_links = $('[id^=add-' + game_id + '-]')
+        }
+
+        add_links.each(function() {
             var href = $(this).attr('href');
             $(this).attr('href', href.replace('true', 'false'));
             $(this).attr('uk-icon', 'plus');
