add test style1 to toolbar (my games)

--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -29,9 +29,11 @@ switch (view) {
 }
 
 filter();
+showHideToolbar();
 changeTheme();
 toggleEditMenu();
 changeMyView();
+
 if (no_games) {
     disableSortLinks();
 }
