--- a/app/views/layouts/_toolbar.html.erb
+++ b/app/views/layouts/_toolbar.html.erb
@@ -1,13 +1,14 @@
-<div class="toolbar">
+<div id="toolbar">
+  <%= content_tag :a, nil, id: 'tool-show', 'uk-icon': 'chevron-left' %>
   <ul>
   <!-- cover view -->
   <li><%= content_tag :a, nil, class: 'change-my-view', 'view': 'covers', 'coll_id': collection.id, 'uk-icon': 'thumbnails' %></li>
   <!-- panels view -->
-  <li><%= content_tag :a, nil, class: 'change-my-view', 'view': 'panels', 'coll_id': collection.id, 'uk-icon': 'list' %></li>
+  <li><%= content_tag :a, nil, class: 'change-my-view active', 'view': 'panels', 'coll_id': collection.id, 'uk-icon': 'list' %></li>
   <!-- list view -->
-  <li><%= content_tag :a, nil, class: 'change-my-view', 'view': 'list', 'coll_id': collection.id, 'uk-icon': 'table' %></li>
+  <li><%= content_tag :a, nil, class: 'change-my-view active', 'view': 'list', 'coll_id': collection.id, 'uk-icon': 'table' %></li>
   <!-- change theme -->
-  <li><%= content_tag :a, nil, id: 'change-theme', 'uk-icon': 'paint-bucket' %></li>
+  <li><%= content_tag :a, svg('moon'), id: 'change-theme', class: 'active uk-icon' %></li>
   <!-- hide overlays -->
   <li><%= content_tag :a, nil, id: 'addl-hide', 'uk-icon': 'close' %></li>
   <!-- hide cover view info -->
