--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -897,7 +897,7 @@ input.coll-form {
     }
 }
 
-// Other (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - - - - //
+// Other (Search IGDB)
 .uk-tooltip {
     box-shadow: -2px 4px 9px 1px #0000004a !important;
     box-sizing: border-box;
@@ -909,32 +909,61 @@ input.coll-form {
     font-size: 12px;
 }
 
-// Search Results (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - //
+// Search Results (Search IGDB)
 #search-results {
     // margin-top: 120px;
     margin-top: 80px;
 }
 
 // ToolBar
-.toolbar {
+#toolbar {
     position: fixed;
     top: 50%;
-    right: 20px;
+    right: -30px;
     z-index: 150;
-    border: 1px solid #bababa;
-    padding: 10px;
-    height: 214px;
     box-sizing: border-box;
-    margin-top: -107px;
+    transform: translateY(-50%);
+    transition: right 0.3s;
+
+    &.open {
+        right: 15px;
+    }
+
+    li {
+        padding: 3px 0;
+    }
 
     ul {
         list-style: none;
-        padding: 0px;
         margin: 0px;
+    }
+
+    a {
+        color: #999;
+        border-radius: 3px;
+        padding: 4px;
+
+        &:hover {
+            color: #666;
+        }
+        &.active {
+            background: #d4d4d4;
+        }
     }
 }
 
-// Show More Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
+#tool-show {
+    position: absolute;
+    top: 50%;
+    left: -5px;
+    margin-top: -10px;
+}
+
+#tool-show.open {
+    transform: rotate(180deg);
+}
+
+// Show More Button (Search IGDB)
 #show-more, .no-more {
     text-align: center;
 }
