--- a/app/views/layouts/_toolbar.html.erb
+++ b/app/views/layouts/_toolbar.html.erb
@@ -1,5 +1,5 @@
+<%= content_tag :a, nil, id: 'tool-show' %>
 <div id="toolbar">
-  <%= content_tag :a, nil, id: 'tool-show', 'uk-icon': 'chevron-left' %>
   <ul>
   <!-- cover view -->
   <li><%= content_tag :a, nil, class: 'change-my-view', 'view': 'covers', 'coll_id': collection.id, 'uk-icon': 'thumbnails' %></li>
