--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -30,7 +30,7 @@
     <%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
     <% end %>
 <% end %>
-<div id='r-q'></div>
+<div id='r-q'>,,on</div>
 <div id='r-s'></div>
 <div class="my-games">
     <%= render partial: "my_games/#{ view }", locals: { collection: collection } %>
